lisk-dex-electron/src/PlaceOrder.css
.action-name {
    font-size: 20px;
    color: rgb(136, 136, 141);
    margin-bottom: 15px;
}

.order-val-input {
    background-color: rgb(47, 46, 49);
    color: white;
    font-family: 'Courier New', Courier, monospace;
    font-size: 18px;
    margin-top: 6px;
    height: 20px;
    padding: 5px;
    width: 90%;
    border: 1px solid grey;
    outline-color: rgb(194, 194, 194);
    margin-bottom: 10px;
}

.place-buy-order-button {
  cursor: pointer;
  font-size: 20px;
  color: #FFFFFF;
  border: 0;
  padding: 5px 15px 5px 15px;
  outline: none;
  width: 105px;
  vertical-align: top;
  background: #008800;
}

.place-buy-order-button[disabled] {
  cursor: default;
}

.place-sell-order-button {
  cursor: pointer;
  font-size: 20px;
  color: #FFFFFF;
  border: 0;
  padding: 5px 15px 5px 15px;
  outline: none;
  width: 105px;
  vertical-align: top;
  background: #880000;
}

.place-sell-order-button[disabled] {
  cursor: default;
}

.price-container, .amount-container {
  position: relative;
}

.input-chain-symbol {
  position: absolute;
  right: 30px;
  top: calc(50% - 11px);
  color: #999999;
  user-select: none;
}

.estimator-info-button {
  display: inline-block;
  vertical-align: top;
  background: none;
  border: 0;
  color: #FFFFFF;
  outline: none;
  cursor: pointer;
  padding: 0;
  margin: 0;
}

@media only screen and (max-width: 400px) {
  .market-limit-tabs {
    display: flex;
    flex-direction: column;
    margin-right: 10px;
  }

  .input-chain-symbol {
    right: 10px;
  }
}

